# logPy

./: .gitignore  LICENSE  README.md  example.py  filefinder.py  pyproject.toml  setup.py
logpy/: __init__.py  logdeleter.py  printtime.py
